Added map fragment to same fragment as current friends. Deleted a few things as well

--- a/BattleBuddies/src/main/AndroidManifest.xml
+++ b/BattleBuddies/src/main/AndroidManifest.xml
@@ -61,7 +61,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".ViewControllers.SignUpController" />
-        <activity android:name=".ViewControllers.NavigationController" />
+        <activity android:name=".ViewControllers.FragmentNavigationController" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
