--- a/BattleBuddies/build.gradle
+++ b/BattleBuddies/build.gradle
@@ -44,4 +44,5 @@ dependencies {
     compile 'com.google.android.gms:play-services-location:10.2.1'
     compile 'com.google.android.gms:play-services:10.2.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'com.miguelcatalan:materialsearchview:1.4.0'
 }
