--- a/BattleBuddies/build.gradle
+++ b/BattleBuddies/build.gradle
@@ -45,4 +45,5 @@ dependencies {
     compile 'com.google.android.gms:play-services:10.2.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.miguelcatalan:materialsearchview:1.4.0'
+    compile 'net.alhazmy13.MediaPicker:libary:2.3.2'
 }
