--- a/BattleBuddies/src/main/AndroidManifest.xml
+++ b/BattleBuddies/src/main/AndroidManifest.xml
@@ -22,6 +22,8 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.CAMERA" />
+
 
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
