--- a/BattleBuddies/build.gradle
+++ b/BattleBuddies/build.gradle
@@ -46,4 +46,5 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.miguelcatalan:materialsearchview:1.4.0'
     compile 'net.alhazmy13.MediaPicker:libary:2.3.2'
+    compile 'com.codinguser.android:contactpicker:3.0.0@aar'
 }
