--- a/BattleBuddies/build.gradle
+++ b/BattleBuddies/build.gradle
@@ -47,4 +47,5 @@ dependencies {
     compile 'com.miguelcatalan:materialsearchview:1.4.0'
     compile 'net.alhazmy13.MediaPicker:libary:2.3.2'
     compile 'com.1gravity:android-contactpicker:1.3.2'
+    compile 'com.nex3z:toggle-button-group:1.0.2'
 }
