--- a/BattleBuddies/build.gradle
+++ b/BattleBuddies/build.gradle
@@ -48,4 +48,5 @@ dependencies {
     compile 'net.alhazmy13.MediaPicker:libary:2.3.2'
     compile 'com.1gravity:android-contactpicker:1.3.2'
     compile 'com.nex3z:toggle-button-group:1.0.2'
+    compile "com.terrakok.phonematter:phonematter:1.0@aar"
 }
