--- a/BattleBuddies/build.gradle
+++ b/BattleBuddies/build.gradle
@@ -52,4 +52,5 @@ dependencies {
     compile 'com.parse.bolts:bolts-android:1.4.0'
     compile 'com.google.firebase:firebase-core:10.0.1'
     compile 'com.google.firebase:firebase-messaging:10.0.1'
+    compile 'cn.pedant.sweetalert:library:1.3'
 }
