--- a/BattleBuddies/src/main/AndroidManifest.xml
+++ b/BattleBuddies/src/main/AndroidManifest.xml
@@ -43,6 +43,7 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
+        tools:replace="android:icon,android:theme"
         android:name=".ViewControllers.WeightManagementMain"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
