--- a/BattleBuddies/build.gradle
+++ b/BattleBuddies/build.gradle
@@ -11,6 +11,9 @@ android {
         versionCode 1
         versionName "1.0"
         multiDexEnabled true
+        manifestPlaceholders = [onesignal_app_id: "0f197a61-cb48-4787-b6af-2249c0465798",
+                                // Project number pulled from dashboard, local value is ignored.
+                                onesignal_google_project_number: "REMOTE"]
     }
     buildTypes {
         release {
@@ -53,4 +56,5 @@ dependencies {
     compile 'com.google.firebase:firebase-core:10.0.1'
     compile 'com.google.firebase:firebase-messaging:10.0.1'
     compile 'cn.pedant.sweetalert:library:1.3'
+    compile 'com.onesignal:OneSignal:[3.5.8, 3.99.99]'
 }
