push notifications will now bring user either to the home page if it is a simple notification or to their profile it if is a request.

--- a/BattleBuddies/src/main/AndroidManifest.xml
+++ b/BattleBuddies/src/main/AndroidManifest.xml
@@ -105,7 +105,7 @@
                 <action android:name="com.parse.push.intent.DELETE" />
             </intent-filter>
         </receiver>
-
+        <meta-data android:name="com.onesignal.NotificationOpened.DEFAULT" android:value="DISABLE" />
     </application>
 
 </manifest>
