--- a/BattleBuddies/src/main/AndroidManifest.xml
+++ b/BattleBuddies/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    tools:node="replace"
     package="com.parse.starter">
 
     <uses-sdk
@@ -34,13 +35,6 @@
         android:protectionLevel="signature" />
     <uses-permission android:name="com.example.dylancastanhinha.weightmanagement.permission.C2D_MESSAGE" />
 
-
-    <!--
-         The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
-         Google Maps Android API v2, but you must specify either coarse or fine
-         location permissions for the 'MyLocation' functionality. 
-    -->
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
         tools:replace="android:icon,android:theme"
