--- a/BattleBuddies/build.gradle
+++ b/BattleBuddies/build.gradle
@@ -56,4 +56,5 @@ dependencies {
     compile 'com.google.firebase:firebase-messaging:10.0.1'
     compile 'cn.pedant.sweetalert:library:1.3'
     compile 'com.onesignal:OneSignal:[3.5.8, 3.99.99]'
+    compile 'net.alhazmy13.MediaPicker:libary:2.3.3'
 }
